// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Time does not show 0 delay number 1`] = `
<div
  class="Time-time  Time-seperateLine"
>
  <span
    class=""
    data-testid="time"
  >
    13:55
  </span>
</div>
`;

exports[`Time no time 1`] = `null`;

exports[`Time showOriginalTime = false 5 Minutes early 1`] = `
<div
  class="Time-time Time-early Time-seperateLine"
>
  <span
    class=""
    data-testid="time"
  >
    13:55
  </span>
  <span
    class=""
    data-testid="delay"
  >
    -5
  </span>
</div>
`;

exports[`Time showOriginalTime = false 10 Minutes delay 1`] = `
<div
  class="Time-time Time-delayed Time-seperateLine"
>
  <span
    class=""
    data-testid="time"
  >
    13:55
  </span>
  <span
    class=""
    data-testid="delay"
  >
    +10
  </span>
</div>
`;

exports[`Time showOriginalTime = true 5 Minutes early 1`] = `
<div
  class="Time-time Time-seperateLine"
>
  <span
    class=""
    data-testid="time"
  >
    14:00
  </span>
  <span
    class="Time-early"
    data-testid="delay"
  >
    -5
  </span>
</div>
`;

exports[`Time showOriginalTime = true 10 Minutes delay 1`] = `
<div
  class="Time-time Time-seperateLine"
>
  <span
    class=""
    data-testid="time"
  >
    13:45
  </span>
  <span
    class="Time-delayed"
    data-testid="delay"
  >
    +10
  </span>
</div>
`;

exports[`Time shows 0 delay number 1`] = `
<div
  class="Time-time Time-early Time-seperateLine"
>
  <span
    class=""
    data-testid="time"
  >
    13:55
  </span>
  <span
    class=""
    data-testid="delay"
  >
    +0
  </span>
</div>
`;
